[project]
name = "tortoise-auth"
version = "0.5.0"
description = "Async authentication and user management for Tortoise ORM. Framework-agnostic, extensible, secure by default."
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Elie Terrien" }]
keywords = ["tortoise-orm", "authentication", "auth", "async", "user-management", "totp", "2fa", "api-keys"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "tortoise-orm>=1.0.0",
    "pwdlib[argon2,bcrypt]>=0.2.0",
    "PyJWT>=2.9.0",
    "pyotp>=2.8.0",
    "qrcode[pil]>=7.0.0",
]

[project.optional-dependencies]
starlette = ["starlette>=0.52.1"]

[project.urls]
Homepage = "https://github.com/elie/tortoise-auth"
Documentation = "https://tortoise-auth.softwarefamily.fr/"
Repository = "https://github.com/software-family/tortoise-auth/"
Issues = "https://github.com/software-family/tortoise-auth/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tortoise_auth"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "aiosqlite>=0.20",
    "httpx>=0.25",
    "starlette>=0.27",
    "pytest-asyncio>=1.3.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-vvv"
markers = [
    "slow: marks tests as slow",
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["tortoise_auth"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tortoise.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pwdlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyotp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qrcode.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jwt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true
